--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1469,107 +1469,107 @@ stories:
   domain: http://www.chicagotribune.com/
   link: http://www.chicagotribune.com/news/breaking/ct-oak-forest-eagle-sports-range-boy-shot-20191229-hximz5kwhrbbrcezb2untsrlsm-story.html
 images:
-- name: nazi-invasion-water-fountain-many-shooting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-fountain-many-shooting.jpg
-- name: aws-s3-stories-new-oldbarn-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-oldbarn-dark-dali.jpg
-- name: white-house-lawn-white-house-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-dali.jpg
-- name: oldroad-old-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-constitution.jpg
-- name: powerlines-power-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-space-pizza.jpg
-- name: rockingchair-rockingchair-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crabapple.jpg
-- name: liberty-back-statue-liberty-back-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-paper.jpg
-- name: dc-statue-dcstatue-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-deep-connections.jpg
-- name: old-door-lock-old-door-lock-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
-- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
-- name: catacombs-catacombs-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smoking-cigarette.jpg
-- name: beach-rocks-beach-rocks-currents-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-internet-numbers.jpg
-- name: copper-circuit-IMG_7788.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7788.jpg
-- name: wind-mills-windmills-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
-- name: stories-new-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-beach-rocks-currents-kand-two.jpg
-- name: aws-s3-stories-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-dark-dali.jpg
-- name: bf-skinner-seattle-waterfront-ferris-wheel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-waterfront-ferris-wheel.jpg
-- name: carry-load-carryload-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-alien-goggles.jpg
-- name: white-house-whitehouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-monet-one.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
-- name: store-on-corner-oldcabin-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
-- name: power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-- name: eduardo-eduardo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-green-zuma.jpg
-- name: locked-up-steam-lock-up-steam-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-pablo-blue.jpg
-- name: wind-mills-windmills-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
-- name: legal-statue-legalstatue-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-alberto-giacometti.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-electricity.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-electricity.png
+- name: old-cabin-oldcabin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin.jpg
+- name: stalin-time-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-desert-road-mountains.jpg
+- name: white-house-lawn-white-house-lawn-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
+- name: curtain-curtain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-spagetti-accident.jpg
+- name: stalin-time-statue-face-looking-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-face-looking-up.jpg
+- name: bf-skinner-cemetery_35902984304_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cemetery_35902984304_o.jpg
+- name: stalin-time-hiding-monster-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hiding-monster-statue.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-pablo-blue.jpg
+- name: hollywood-building-hollywood-building-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-graham-sutherland.jpg
+- name: stories-36745180055-45289923eb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36745180055-45289923eb-z.jpg
+- name: rockingchair-rockingchair-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-sand-paper.jpg
+- name: fence-mexico-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-post-modern.jpg
+- name: walled-garden-walled-garden-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-pond.jpg
+- name: ellis-island-ellisisland-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dry-skin.jpg
 - name: store-on-corner-store-really-hot.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-really-hot.jpg
-- name: old-gas-pumps-oldgaspumps-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-paper.jpg
-- name: oldbarn-oldbarn-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-missle.jpg
-- name: stalin-time-underground-subway_35929749683_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-underground-subway_35929749683_o.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-- name: mediterranean-mediterranean-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-paper.jpg
-- name: old-barn-old-barn-1500-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-pablo-blue.jpg
-- name: braceros-domingo-ulloa-stairs-down-blue-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-stairs-down-blue-green.jpg
-- name: gypsymosaic-gypsy-eyes-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-really-hot.jpg
-- name: oldhouse-granaryfield-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-dali.jpg
-- name: beach-rocks-beach-rocks-currents-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-emily-carr.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
-- name: oldroad-old-road-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-kandinsky-bv.jpg
-- name: la-muse-hotel-down-sidewalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hotel-down-sidewalk.jpg
-- name: lincoln-memorial-lincolnmemorial-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-two.jpg
-- name: braceros-domingo-ulloa-satellite-dishes-pointing-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-satellite-dishes-pointing-up.jpg
-- name: mediterranean-mediterranean-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-sunday.jpg
-- name: old-granary-field-granaryfield-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-diego-rivera1.jpg
-- name: copper-circuit-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-sidewalk-washington.jpg
-- name: nazi-invasion-city-skyline-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-skyline-bright.jpg
-- name: downtown-old-empty-retail-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-leaflets-of-the-russian-revolution.jpg
-- name: fence-mexico-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crafty-painting.jpg
-- name: amusement-park-amusement-park-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colored-circuits.jpg
-- name: oldbarn-oldbarn-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purp-paper.jpg
+- name: statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
+- name: crow-crow-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-color.jpg
+- name: art-museum-art-museum-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-clean-view.jpg
+- name: cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+- name: carry-load-carryload-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-brush.jpg
+- name: aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+- name: bf-skinner-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-close-to-all-remote-aircraft.jpg
+- name: rain-princess-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-building-trees-sky.jpg
+- name: oldsmallboat-oldsmallboat-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-light-dali.jpg
+- name: windowmountain-window-mountain-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-creativity.jpg
+- name: braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-electric-tower-sun-behind.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+- name: nazi-invasion-wild-gease-in-the-water.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wild-gease-in-the-water.jpg
+- name: sand-hand-sand-hand-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-space-pizza.jpg
+- name: bf-skinner-working-on-railroad-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-1.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+- name: legal-statue-legalstatue-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-dali.jpg
+- name: nazi-invasion-IMG_6288.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6288.jpg
+- name: braceros-domingo-ulloa-supreme-court_36341562380_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-supreme-court_36341562380_o.jpg
+- name: store-on-corner-store-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-granite.jpg
+- name: oldhouse-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-color.jpg
+- name: copper-circuit-girl-reading-bench-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-bench-garden.jpg
+- name: containership-containership-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-green-zuma.jpg
+- name: udnie-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7319.jpg
+- name: rockingchair-rockingchair-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-light-dali.jpg
+- name: death-valley-death-valley-national-park-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-space-pizza.jpg
+- name: hollywood-building-hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-marcel-duchamp.jpg
+- name: nyc-flag-nycflag-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-atari-missle.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: berlinwall2-berlinwall-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kandinsky-bv.jpg
+- name: dragon_close-up-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-leaflets-of-the-russian-revolution.jpg
+- name: old-granary-field-granaryfield-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-emily-carr.jpg
+- name: oldhousecars-house-old-cars-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-bright-sand.jpg
+- name: server-cloud-server-racks-door-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
+- name: ellis-island-ellis-island-room-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-rainbow-festival.jpg
 ---
 Democrats To Use Grant For Interns, Grassroots Organizers.&nbsp;Jewish Leaders Urge Action After Another 'senseless' Attack.&nbsp;Burger King Coming To Kingstree.&nbsp;Two Part Winter Storm Continues For The Northland.&nbsp;Chinas Public Diplomacy On Social Media.&nbsp;Rotary Service Project At Reagan Park.&nbsp;Ron Rivera To Meet With Redskins About Coaching Vacancy.&nbsp;Garrett Future Murky As Cowboys Beat Redskins, Miss Playoffs.&nbsp;
